# telegram-bots-portfolio

./: .gitignore  PORTFOLIO_ASSESSMENT.md  README.md
CoursePaymentBot/: .env.example  .gitignore  CHANNEL_SETUP.md  CLIENT_SETUP.md  GET_CHANNEL_ID.md  HOW_TO_GET_TOKEN.md  PAYMENT_SETUP.md  PRODUCTION_SETUP.md  README.md  STRUCTURE_CHECK.md  check_structure.py  database.py  handlers.py  keyboards.py  main.py  payments.py  requirements.txt  run.sh  test_token_formats.md
CoursePaymentBot/materials/: trial_lesson.md
CoursePaymentBot/src/: __init__.py  config.py
WB_FBS_bot/: .env — копия.example  .gitignore  README.md  main.py  start.sh  test_views_simple.py
WB_FBS_bot/api/: __init__.py  analytics_client.py  (+2 more)
booking-bot/: README.md  config.py  database.py  env.example  keyboards.py  main.py  requirements.txt  run.sh
pdf-checkmaker-bot/: README.md  bot.py  example_usage.py  pyproject.toml  requirements.txt  run.sh
pdf-checkmaker-bot/examples/: certificate.html  sample_receipt.csv  sample_template.html  список сертификатов.csv
pdf-checkmaker-bot/src/: __init__.py  config.py  file_parser.py  pdf_generator.py  template_renderer.py  utils.py
pdf-checkmaker-bot/src/bot/: __init__.py  handlers.py
pdf-checkmaker-bot/tests/: __init__.py  test_pdf_generator.py
pdf-checkmaker-bot/tests/test_files/: sample.csv  sample.html  sample.json
reminder-bot/: .env.example  .gitignore  README.md  main.py  requirements.txt  run.sh  start.bat
telegram-site-chat/: .env.example  .gitignore  README.md  bot.py  index.html  main_bot.py  main_server.py  requirements.txt  server.py
(+52 files in other folders)
